Fixed navbar config on tablets and up.

--- a/src/css/_responsive.scss
+++ b/src/css/_responsive.scss
@@ -2,8 +2,8 @@
     _responsive.scss: responsiveness for the inofix-theme 
 
     Created:    2017-06-28 13:30 by Christian Berndt
-    Modified:   2017-07-15 22:46 by Christian Berndt
-    Version:    0.3.5
+    Modified:   2017-07-17 12:35 by Christian Berndt
+    Version:    0.3.6
 */
 
 @mixin keyvisual($billboard-color) {
@@ -140,6 +140,8 @@
         }
         
         .navbar-nav {
+        
+            padding: 0; 
         
             > li {
             
